src/pages/Home/Home.module.scss
@import "../../scss/variables";

.title {
  width: 869px;
  margin: 0 auto;
  font-style: normal;
  font-weight: 700;
  font-size: 101px;
  line-height: 98%;
  text-align: center;
  color: #000000;
  margin-bottom: 60px;
}

.content {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  gap: 22px;
  margin-bottom: 40px;

  .cards {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 1fr);
    row-gap: 20px;
    column-gap: 30px;
  }
}

.show-more-btn {
  border: none;
  background: none;
  width: 146px;
  height: 27px;
  margin: 0 auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
  cursor: pointer;
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 150%;
  color: $black;
  margin-bottom: 128px;

  &:hover {
    color: $red;
    text-decoration: underline;
    text-decoration-color: $red;
    text-decoration-thickness: 2px;
  }
}

